--- a/Calculadora/Calculadora/Base.lproj/Main.storyboard
+++ b/Calculadora/Calculadora/Base.lproj/Main.storyboard
@@ -13,14 +13,14 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="xEt-sg-h4K">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="10" y="34" width="300" height="40"/>
@@ -34,6 +34,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="0.0" y="99" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="agregarNumero:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="dXZ-L9-NGh"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eb9-be-1Kg">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -43,6 +46,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="80" y="99" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="agregarNumero:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="DKl-wa-oOn"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7M6-xG-je3">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -52,8 +58,11 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="160" y="99" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="agregarNumero:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="4lt-BY-APt"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eew-Pf-VMr">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eew-Pf-VMr">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="/">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -61,6 +70,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="240" y="99" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="realizarOperacion:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="E2V-8Z-ppV"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pnN-IS-6ht">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -70,6 +82,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="0.0" y="137" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="agregarNumero:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="QlM-Kb-8QC"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xNa-NV-uhT">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -79,6 +94,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="80" y="137" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="agregarNumero:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="2Hv-gE-rH1"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWW-oL-t57">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -88,8 +106,11 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="160" y="137" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="agregarNumero:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="CHr-VS-KaE"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOM-fU-P9r">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOM-fU-P9r">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="X">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -97,6 +118,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="240" y="137" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="realizarOperacion:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="jJA-Re-InR"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="grc-7z-nrv">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -118,6 +142,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="80" y="175" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="agregarNumero:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="TVL-EH-9t3"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sW-QG-EEx">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -127,8 +154,11 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="160" y="175" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="agregarNumero:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="t6r-0y-P0m"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQv-Uf-gJj">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQv-Uf-gJj">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="-">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -136,6 +166,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="240" y="175" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="realizarOperacion:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="KnI-40-YA8"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LjA-nJ-ysC">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -163,8 +196,11 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="160" y="213" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="mostrarResultado:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="PC1-24-yoi"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XDe-MQ-4Y4">
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XDe-MQ-4Y4">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="+">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -172,6 +208,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="240" y="213" width="80" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="realizarOperacion:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="8MW-IA-8xv"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
