--- a/Calculadora/Calculadora/Base.lproj/Main.storyboard
+++ b/Calculadora/Calculadora/Base.lproj/Main.storyboard
@@ -274,6 +274,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="4.5" y="304"/>
         </scene>
     </scenes>
 </document>
