--- a/Calculadora/Calculadora/Base.lproj/Main.storyboard
+++ b/Calculadora/Calculadora/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jyg-Ag-6gr">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -14,7 +15,7 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="xEt-sg-h4K">
@@ -229,6 +230,17 @@
                                     <action selector="realizarOperacion:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="8MW-IA-8xv"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bryan" translatesAutoresizingMaskIntoConstraints="NO" id="ajC-e3-fL0">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="120"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="80" y="272" width="240" height="240"/>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -301,22 +313,35 @@
                                 <exclude reference="uXt-VE-kFF"/>
                                 <exclude reference="2a2-sQ-ldF"/>
                                 <exclude reference="XDe-MQ-4Y4"/>
+                                <exclude reference="ajC-e3-fL0"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="71e-oV-17L"/>
                                 <exclude reference="VE6-mY-LZ2"/>
                                 <exclude reference="rrC-QP-LhD"/>
-                                <exclude reference="3oh-cN-9Ai"/>
-                                <exclude reference="VkE-Wi-63d"/>
-                                <exclude reference="XxV-in-wKM"/>
+                                <exclude reference="bQp-wW-Xme"/>
+                                <exclude reference="dZs-MV-5sh"/>
+                                <exclude reference="xUR-iY-bwq"/>
+                                <exclude reference="IH8-fA-yKp"/>
+                                <exclude reference="MSU-sT-nm4"/>
+                                <exclude reference="Bhw-x0-Ovt"/>
+                                <exclude reference="QHE-rh-a2J"/>
+                                <exclude reference="tH8-qn-Euc"/>
                                 <exclude reference="EDu-a0-JeZ"/>
                                 <exclude reference="Koi-TF-J6P"/>
                                 <exclude reference="SiI-wF-uXd"/>
                                 <exclude reference="cAh-LK-pem"/>
-                                <exclude reference="2f9-dP-AZX"/>
-                                <exclude reference="4np-Vd-R0O"/>
-                                <exclude reference="FFl-uo-id9"/>
-                                <exclude reference="wtc-T3-gDF"/>
+                                <exclude reference="Jhb-v3-0ug"/>
+                                <exclude reference="lFM-NB-ZAF"/>
+                                <exclude reference="mFc-PA-Rz6"/>
+                                <exclude reference="ZXE-cj-lGC"/>
+                                <exclude reference="pzL-U2-ENm"/>
+                                <exclude reference="KEM-P9-JCs"/>
+                                <exclude reference="RIT-Jn-0Mz"/>
+                                <exclude reference="TwK-or-ygy"/>
+                                <exclude reference="sBv-Kj-tSd"/>
+                                <exclude reference="Fgm-rQ-gCu"/>
+                                <exclude reference="WUt-YM-nWE"/>
                                 <exclude reference="1ls-UY-Dw2"/>
                                 <exclude reference="9n4-qe-SmA"/>
                                 <exclude reference="A3s-tN-T5Q"/>
@@ -324,34 +349,22 @@
                                 <exclude reference="TXH-q1-PkN"/>
                                 <exclude reference="ps2-xn-0bv"/>
                                 <exclude reference="zi3-SE-CE1"/>
-                                <exclude reference="Fgm-rQ-gCu"/>
-                                <exclude reference="WUt-YM-nWE"/>
-                                <exclude reference="Bhw-x0-Ovt"/>
-                                <exclude reference="QHE-rh-a2J"/>
-                                <exclude reference="tH8-qn-Euc"/>
-                                <exclude reference="ZXE-cj-lGC"/>
-                                <exclude reference="pzL-U2-ENm"/>
+                                <exclude reference="3oh-cN-9Ai"/>
+                                <exclude reference="VkE-Wi-63d"/>
+                                <exclude reference="XxV-in-wKM"/>
+                                <exclude reference="2f9-dP-AZX"/>
+                                <exclude reference="4np-Vd-R0O"/>
+                                <exclude reference="FFl-uo-id9"/>
+                                <exclude reference="ObI-jC-Kvr"/>
+                                <exclude reference="RyR-0H-7WW"/>
+                                <exclude reference="XE5-tq-af5"/>
+                                <exclude reference="dGr-ZO-ei4"/>
                                 <exclude reference="Uv8-vk-ES2"/>
                                 <exclude reference="tOw-wE-nKV"/>
                                 <exclude reference="uQk-EM-9x8"/>
                                 <exclude reference="l4n-PV-fcf"/>
                                 <exclude reference="l7c-lP-Iwl"/>
-                                <exclude reference="IH8-fA-yKp"/>
-                                <exclude reference="MSU-sT-nm4"/>
-                                <exclude reference="bQp-wW-Xme"/>
-                                <exclude reference="dZs-MV-5sh"/>
-                                <exclude reference="xUR-iY-bwq"/>
-                                <exclude reference="Jhb-v3-0ug"/>
-                                <exclude reference="lFM-NB-ZAF"/>
-                                <exclude reference="mFc-PA-Rz6"/>
-                                <exclude reference="KEM-P9-JCs"/>
-                                <exclude reference="RIT-Jn-0Mz"/>
-                                <exclude reference="TwK-or-ygy"/>
-                                <exclude reference="sBv-Kj-tSd"/>
-                                <exclude reference="ObI-jC-Kvr"/>
-                                <exclude reference="RyR-0H-7WW"/>
-                                <exclude reference="XE5-tq-af5"/>
-                                <exclude reference="dGr-ZO-ei4"/>
+                                <exclude reference="wtc-T3-gDF"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -373,22 +386,35 @@
                                 <include reference="uXt-VE-kFF"/>
                                 <include reference="2a2-sQ-ldF"/>
                                 <include reference="XDe-MQ-4Y4"/>
+                                <include reference="ajC-e3-fL0"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="71e-oV-17L"/>
                                 <include reference="VE6-mY-LZ2"/>
                                 <include reference="rrC-QP-LhD"/>
-                                <include reference="3oh-cN-9Ai"/>
-                                <include reference="VkE-Wi-63d"/>
-                                <include reference="XxV-in-wKM"/>
+                                <include reference="bQp-wW-Xme"/>
+                                <include reference="dZs-MV-5sh"/>
+                                <include reference="xUR-iY-bwq"/>
+                                <include reference="IH8-fA-yKp"/>
+                                <include reference="MSU-sT-nm4"/>
+                                <include reference="Bhw-x0-Ovt"/>
+                                <include reference="QHE-rh-a2J"/>
+                                <include reference="tH8-qn-Euc"/>
                                 <include reference="EDu-a0-JeZ"/>
                                 <include reference="Koi-TF-J6P"/>
                                 <include reference="SiI-wF-uXd"/>
                                 <include reference="cAh-LK-pem"/>
-                                <include reference="2f9-dP-AZX"/>
-                                <include reference="4np-Vd-R0O"/>
-                                <include reference="FFl-uo-id9"/>
-                                <include reference="wtc-T3-gDF"/>
+                                <include reference="Jhb-v3-0ug"/>
+                                <include reference="lFM-NB-ZAF"/>
+                                <include reference="mFc-PA-Rz6"/>
+                                <include reference="ZXE-cj-lGC"/>
+                                <include reference="pzL-U2-ENm"/>
+                                <include reference="KEM-P9-JCs"/>
+                                <include reference="RIT-Jn-0Mz"/>
+                                <include reference="TwK-or-ygy"/>
+                                <include reference="sBv-Kj-tSd"/>
+                                <include reference="Fgm-rQ-gCu"/>
+                                <include reference="WUt-YM-nWE"/>
                                 <include reference="1ls-UY-Dw2"/>
                                 <include reference="9n4-qe-SmA"/>
                                 <include reference="A3s-tN-T5Q"/>
@@ -396,34 +422,22 @@
                                 <include reference="TXH-q1-PkN"/>
                                 <include reference="ps2-xn-0bv"/>
                                 <include reference="zi3-SE-CE1"/>
-                                <include reference="Fgm-rQ-gCu"/>
-                                <include reference="WUt-YM-nWE"/>
-                                <include reference="Bhw-x0-Ovt"/>
-                                <include reference="QHE-rh-a2J"/>
-                                <include reference="tH8-qn-Euc"/>
-                                <include reference="ZXE-cj-lGC"/>
-                                <include reference="pzL-U2-ENm"/>
+                                <include reference="3oh-cN-9Ai"/>
+                                <include reference="VkE-Wi-63d"/>
+                                <include reference="XxV-in-wKM"/>
+                                <include reference="2f9-dP-AZX"/>
+                                <include reference="4np-Vd-R0O"/>
+                                <include reference="FFl-uo-id9"/>
+                                <include reference="ObI-jC-Kvr"/>
+                                <include reference="RyR-0H-7WW"/>
+                                <include reference="XE5-tq-af5"/>
+                                <include reference="dGr-ZO-ei4"/>
                                 <include reference="Uv8-vk-ES2"/>
                                 <include reference="tOw-wE-nKV"/>
                                 <include reference="uQk-EM-9x8"/>
                                 <include reference="l4n-PV-fcf"/>
                                 <include reference="l7c-lP-Iwl"/>
-                                <include reference="IH8-fA-yKp"/>
-                                <include reference="MSU-sT-nm4"/>
-                                <include reference="bQp-wW-Xme"/>
-                                <include reference="dZs-MV-5sh"/>
-                                <include reference="xUR-iY-bwq"/>
-                                <include reference="Jhb-v3-0ug"/>
-                                <include reference="lFM-NB-ZAF"/>
-                                <include reference="mFc-PA-Rz6"/>
-                                <include reference="KEM-P9-JCs"/>
-                                <include reference="RIT-Jn-0Mz"/>
-                                <include reference="TwK-or-ygy"/>
-                                <include reference="sBv-Kj-tSd"/>
-                                <include reference="ObI-jC-Kvr"/>
-                                <include reference="RyR-0H-7WW"/>
-                                <include reference="XE5-tq-af5"/>
-                                <include reference="dGr-ZO-ei4"/>
+                                <include reference="wtc-T3-gDF"/>
                             </mask>
                         </variation>
                     </view>
@@ -469,4 +483,7 @@
             <point key="canvasLocation" x="4.5" y="304"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bryan" width="200" height="200"/>
+    </resources>
 </document>
