--- a/parse-withTableview/ParseStarterProject/ParseStarterProject/MiStoryboard.storyboard
+++ b/parse-withTableview/ParseStarterProject/ParseStarterProject/MiStoryboard.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ccg-AY-YB0">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--abc-->
@@ -153,9 +154,6 @@
                                             <state key="normal" title="123456">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
-                                            <variation key="widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="32" y="47" width="360" height="30"/>
-                                            </variation>
                                             <connections>
                                                 <action selector="llamarContacto:" destination="aF4-UZ-ySw" eventType="touchDown" id="H5n-vJ-U7y"/>
                                             </connections>
@@ -165,21 +163,42 @@
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
-                                            <variation key="widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="32" y="18" width="360" height="21"/>
-                                            </variation>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="OXq-iv-wrZ" firstAttribute="leading" secondItem="vH6-rJ-vXl" secondAttribute="leadingMargin" constant="24" id="DBf-rr-Y14"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="B5k-dm-Btw" secondAttribute="trailing" constant="252" id="Vfe-6s-AUR"/>
+                                        <constraint firstItem="OXq-iv-wrZ" firstAttribute="top" secondItem="vH6-rJ-vXl" secondAttribute="topMargin" constant="10" id="WC5-sO-1sl"/>
+                                        <constraint firstItem="OXq-iv-wrZ" firstAttribute="trailing" secondItem="vH6-rJ-vXl" secondAttribute="trailingMargin" id="aYm-YI-ONz"/>
+                                        <constraint firstItem="B5k-dm-Btw" firstAttribute="leading" secondItem="vH6-rJ-vXl" secondAttribute="leadingMargin" constant="24" id="ajf-9F-vN4"/>
+                                        <constraint firstItem="B5k-dm-Btw" firstAttribute="top" secondItem="OXq-iv-wrZ" secondAttribute="bottom" constant="8" id="deM-dI-bnx"/>
+                                    </constraints>
                                     <variation key="default">
                                         <mask key="subviews">
                                             <exclude reference="B5k-dm-Btw"/>
                                             <exclude reference="OXq-iv-wrZ"/>
+                                        </mask>
+                                        <mask key="constraints">
+                                            <exclude reference="DBf-rr-Y14"/>
+                                            <exclude reference="WC5-sO-1sl"/>
+                                            <exclude reference="aYm-YI-ONz"/>
+                                            <exclude reference="Vfe-6s-AUR"/>
+                                            <exclude reference="ajf-9F-vN4"/>
+                                            <exclude reference="deM-dI-bnx"/>
                                         </mask>
                                     </variation>
                                     <variation key="widthClass=compact">
                                         <mask key="subviews">
                                             <include reference="B5k-dm-Btw"/>
                                             <include reference="OXq-iv-wrZ"/>
+                                        </mask>
+                                        <mask key="constraints">
+                                            <include reference="DBf-rr-Y14"/>
+                                            <include reference="WC5-sO-1sl"/>
+                                            <include reference="aYm-YI-ONz"/>
+                                            <include reference="Vfe-6s-AUR"/>
+                                            <include reference="ajf-9F-vN4"/>
+                                            <include reference="deM-dI-bnx"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
@@ -195,10 +214,30 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Directorio" id="0TI-gF-0Rv"/>
+                    <connections>
+                        <segue destination="UbC-ip-ZLz" kind="show" identifier="DetailsSegue" id="3bf-CM-gmn"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CVZ-JH-RLy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3783" y="1096"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="HS4-2c-wMa">
+            <objects>
+                <viewController id="UbC-ip-ZLz" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="B24-nq-1eV"/>
+                        <viewControllerLayoutGuide type="bottom" id="fHW-zr-hTv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XLR-sc-erp">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dRU-71-tmf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4549.5" y="1089"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="PW0-MQ-Evu">
